--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3bbf70">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
