--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Sandara Ly</title>
+    <!-- favicon -->
+
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,7 +20,9 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5ed55b">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <meta name="theme-color" content="hsl(145, 72%, 20%)">
+
+      <!-- zoom en mobile disabled -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
